Enhanced TrendViewModel and UI with valuable trend data (dummy for now)

--- a/TrendifyAI/MudBlazorServer/appsettings.json
+++ b/TrendifyAI/MudBlazorServer/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TrendifyAI;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+  "XApi": {
+    "BearerToken": "AAAAAAAAAAAAAAAAAAAAANxAzwEAAAAA1Y%2BT6ESdKmmSSGwFQ37q2QCRO1U%3Dp9MLf7xLynymHZ0sOYsrsnJRrmC1RVjgFvJON9k9v5ZctX630f"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
